--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,7 @@
-awscli==1.16.119
-awsebcli==3.14.13
-backports.shutil-get-terminal-size==1.0.0
-backports.shutil-which==3.5.2
-blessed==1.15.0
-boto3==1.9.109
-botocore==1.12.109
-cached-property==1.5.1
-cement==2.8.2
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
-colorama==0.3.9
-confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
-Django==2.0.3
-django-registration==3.0
-docker==3.7.0
-docker-compose==1.23.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.14
-Flask==1.0.2
-Flask-Login==0.4.1
-Flask-Session==0.3.1
-Flask-SocketIO==3.2.1
-future==0.16.0
-get==2018.11.19
+Django==2.1.7
+django-heroku==0.3.1
 gunicorn==19.9.0
-idna==2.7
-itsdangerous==1.1.0
-Jinja2==2.10
-jmespath==0.9.4
-jsonschema==2.6.0
-MarkupSafe==1.1.0
-pathspec==0.5.9
-pbr==5.1.2
-pexpect==4.6.0
-post==2018.11.20
 psycopg2==2.7.7
-ptyprocess==0.6.0
-public==2018.11.20
-pyasn1==0.4.5
-python-dateutil==2.8.0
-python-engineio==3.3.0
-python-socketio==3.1.2
 pytz==2018.9
-PyYAML==3.13
-query-string==2018.11.20
-request==2018.11.20
-requests==2.20.1
-requirements==0.1
-rsa==3.4.2
-s3transfer==0.2.0
-semantic-version==2.5.0
-six==1.11.0
-SQLAlchemy==1.2.17
-stevedore==1.30.0
-submit50==2.4.9
-termcolor==1.1.0
-texttable==0.9.1
-urllib3==1.24.1
-virtualenv==16.4.1
-virtualenv-clone==0.5.1
-virtualenvwrapper==4.8.4
-wcwidth==0.1.7
-websocket-client==0.55.0
-Werkzeug==0.14.1
 whitenoise==4.1.2
-xmltodict==0.11.0
