--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.5.0
 Django==2.1.7
 django-heroku==0.3.1
+django-registration-redux==2.5
 gunicorn==19.9.0
 Pillow==5.4.1
 psycopg2==2.7.7
