--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ media
 db.sqlite3
 geckodriver.log
 images
+finalProject/settings.py
+bagify/__pycache__
+bagify/migration/0*
+bagify/migration/__pycache__/0*
