--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+asn1crypto==0.24.0
+braintreehttp==0.5.0
 certifi==2019.3.9
+cffi==1.12.2
 chardet==3.0.4
+cryptography==2.6.1
 dj-database-url==0.5.0
 Django==2.1.7
+django-countries==5.3.3
 django-heroku==0.3.1
-django-paypal==1.0.0
 django-registration-redux==2.5
 gunicorn==19.9.0
 idna==2.8
+paypal-checkout-serversdk==1.0.0
 Pillow==5.4.1
 psycopg2==2.7.7
+psycopg2-binary==2.8.1
+pycparser==2.19
+pyOpenSSL==19.0.0
 python-memcached==1.59
 pytz==2018.9
 requests==2.21.0
